connected web service with retrofit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.gunes.orderpractice">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".OrderPracticeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
@@ -21,7 +25,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/MainScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
